[gd_scene load_steps=8 format=3 uid="uid://dd1ykofkd7vly"]

[ext_resource type="PackedScene" uid="uid://4p1ddm6rdpqn" path="res://player.tscn" id="1_bfgud"]
[ext_resource type="Script" path="res://main.gd" id="1_x6umx"]
[ext_resource type="PackedScene" uid="uid://bk4uhgt7aliou" path="res://ball.tscn" id="2_knn7s"]
[ext_resource type="PackedScene" uid="uid://cabt83vy8ub54" path="res://hud.tscn" id="4_fpdov"]
[ext_resource type="PackedScene" uid="uid://q3x8f7t40crk" path="res://arena.tscn" id="5_m2reh"]

[sub_resource type="InputEventKey" id="InputEventKey_6jhin"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_80tjl"]
events = [SubResource("InputEventKey_6jhin")]

[node name="Main" type="Node"]
script = ExtResource("1_x6umx")
player_scene = ExtResource("1_bfgud")
ball_scene = ExtResource("2_knn7s")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0196078, 0.0196078, 0.0588235, 1)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -15.5
offset_right = 48.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
shortcut = SubResource("Shortcut_80tjl")
text = "Start Game"

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource("4_fpdov")]

[node name="Arena" parent="." instance=ExtResource("5_m2reh")]

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="button_down" from="StartButton" to="." method="pressed_start"]
[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
